--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -17,10 +17,17 @@
                 <h2>Login</h2>
             </div>
             <div class="input">
-                <form id="form-login" role="form">
-                    <input type="email" id="email" name="email" placeholder="Email" required>
+                <form id="form-login" role="form" method="POST" action="/Login">
+                    <input type="text" id="username" name="username" placeholder="User Name" required>
                     <input type="password" id="password" name="password" placeholder="Password" required>
-                    <span id="errorMessage" style="font-size:15px; color:red"></span>
+
+                    <span id="errorMessage" style="font-size:15px; color:red">
+                        {% with message = get_flashed_messages()%}
+                            {%if message%}
+                                {{message[0]}}
+                            {%endif%}
+                        {%endwith%}
+                    </span>
                     <input type="submit" style="cursor: pointer;" value="Login">
                 </form>
             </div>
