--- a/Views/Home/Quiz.html
+++ b/Views/Home/Quiz.html
@@ -6,43 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="{{url_for('static' , filename='Javascript/Timer.js')}}"></script>
     <title>Quiz</title>
 </head>
 
 <body>
-    <form action="#">
-        {%for item in data%}
-            <h4 class="card-title">{{loop.index}}) {{item[1]}}</h4>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer1" value="{{item[2]}}">
-                <label class="form-check-label" for="answer1">
-                    {{item[2]}}
-                </label>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3">
+                <div class="d-inline-block mt-3 position-fixed" style="width: 260px;">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">{{subjectInfo[0][1]}}</h5>
+                            <p>Open: {{subjectInfo[0][2]}} - {{subjectInfo[0][3]}} </p>
+                            {%if timeToTake %}
+                                <input type="hidden" id="time" value="{{timeToTake}}">
+                            {%else%}
+                                <input type="hidden" id="time" value="{{subjectInfo[0][4]}}">
+                            {%endif%}
+                            <p style="font-size: 30px;" class="text-primary" id="timer"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer2" value="{{item[3]}}">
-                <label class="form-check-label" for="answer2">
-                    {{item[3]}}
-                </label>
+            <div class="col-9 mb-5 mt-3">
+                <form action="/Quiz/{{id}}" method="POST" id="form-question">
+                    {%for item in data%}
+                    <h4 class="card-title">{{loop.index}}) {{item[1]}}</h4>
+                    <input type="hidden" name="quest{{loop.index}}" value="{{item[0]}}">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer1"
+                            value="{{item[2]}}" required>
+                        <label class="form-check-label" for="answer1">
+                            {{item[2]}}
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer2"
+                            value="{{item[3]}}">
+                        <label class="form-check-label" for="answer2">
+                            {{item[3]}}
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer3"
+                            value="{{item[4]}}">
+                        <label class="form-check-label" for="answer3">
+                            {{item[4]}}
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer4"
+                            value="{{item[5]}}">
+                        <label class="form-check-label" for="answer4">
+                            {{item[5]}}
+                        </label>
+                    </div>
+                    {%endfor%}
+                    <div class="mt-5">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer3" value="{{item[4]}}">
-                <label class="form-check-label" for="answer3">
-                    {{item[4]}}
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="question{{loop.index}}" id="answer4" value="{{item[5]}}">
-                <label class="form-check-label" for="answer4">
-                    {{item[5]}}
-                </label>
-            </div>
-        {%endfor%}
-        <div>
-            <button type="submit" class="btn btn-primary">Submit</button>
         </div>
 
-    </form>
+    </div>
+
 
 </body>
 
