--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -20,6 +20,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" style="font-size: 24px;" href="/CreateExam">Create Exam <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" style="font-size: 24px;" href="/CreateAccount">Create Account <span class="sr-only">(current)</span></a>
+                    </li>
                 {%endif%}
             </ul>
             <div class="float-right">
